# belgium

./: .gitignore  Cargo.toml  README.md  img2bin.py  test.aqb
src/: alu.rs  assemble.rs  cpu.rs  eval.rs  lib.rs  machine.rs  memory.rs  node.rs  opcodes.rs  parse.rs  section.rs  stack.rs  storage.rs  stream.rs  token.rs  vm.rs
