[package]
name = "belgium"
version = "0.1.0"
authors = ["Zander Brown <ab19abm@herts.ac.uk>"]
edition = "2018"

[features]
default = ["getopts"]

[dependencies]
getopts = { version = "0.2.19", optional = true }

[lib]
name = "aqabler"
path = "src/lib.rs"

[[bin]]
name="aqabler"
path="src/bin/aqabler.rs"
required-features = ["getopts"]

[[bin]]
name="aqavm"
path="src/bin/aqavm.rs"
required-features = ["getopts"]