[package]
name = "belgium"
version = "0.1.0"
authors = ["Zander Brown <ab19abm@herts.ac.uk>"]
edition = "2018"
# default-run = "belgium"

[features]
default = ["getopts"]

[dependencies]
getopts = { version = "0.2.19", optional = true }

[lib]
name = "belgium"
path = "src/lib.rs"

# [[bin]]
# name="belgium"
# path="src/bin/belgium.rs"
# required-features = ["getopts"]

[[bin]]
name="belgium-vm"
path="src/bin/vm.rs"
required-features = ["getopts"]