[package]
name = "belgium"
version = "0.2.0"
authors = ["Zander Brown <ab19abm@herts.ac.uk>"]
edition = "2018"
description = "CdM-8 Implementation"
license = "GPL-3.0-or-later"
homepage = "https://github.com/ZanderBrown/belgium"
repository = "https://github.com/ZanderBrown/belgium"
# default-run = "belgium"

[features]
default = ["getopts"]

[dependencies]
getopts = { version = "0.2.19", optional = true }

[lib]
name = "belgium"
path = "src/lib.rs"

# [[bin]]
# name="belgium"
# path="src/bin/belgium.rs"
# required-features = ["getopts"]

[[bin]]
name="belgium-vm"
path="src/bin/vm.rs"
required-features = ["getopts"]